# claudeproject

./: .gitignore  AzuriteConfig  CLAUDE.md  README.md  prompttemplate.md  pyproject.toml  venv.md
.claude/commands/: audit.md
.github/workflows/: claude.yml
agent_explore/: MCP_SETUP.md  README.md  agent.py  example_prompts.txt  flask_app.py  flask_app_browser.py  mcp_config.json  setup_browser.sh  simple_browser.py  test_browser.py  test_playwright.py
agent_explore/demo_sdk/: overview.py
agent_explore/templates/: index.html
cli_project/: architecture.md  mcp_server.py
dfs_claude/: .device_state  .dockerignore  DOCKER_README.md  Dockerfile  README.md  docker-compose-single.yml  docker-compose.yml  main.py  podman-compose-single.yml  podman-compose.yml  pyproject.toml  sliding.ipynb  sliding_pseudocode.ipynb  sliding_window_cheatsheet.html  start-all.sh  start.sh  track.sh  track_http.sh
dfs_claude/.ipynb_checkpoints/: dfs_interactive_tutorial-checkpoint.ipynb  sliding-checkpoint.ipynb  sliding_pseudocode-checkpoint.ipynb
dfs_claude/docs/: BUILD_OPTIMIZATION.md  CLEANUP_PODMAN.md  DEVICE_TRACKING.md  DOCKER_README.md  PODMAN_INSTALLATION.md  PODMAN_README.md  QUICK_START.md  README.md  UNDERSTANDING_IMAGES.md  _ARCHIVE_IMAGE_CLEANUP_SUMMARY.md  (+1 more)
mathematics/: README.md  SETUP.md  index.html  main.py  package.json
notebook/: requests_01.ipynb  requests_02.ipynb
postgre_23ai/: Dockerfile  README.md  docker-compose.yml  openai_embeddings.sql  vector_conn.py  vector_queries.sql  vector_tutorial.py
uigen/: CLAUDE.md  claude.code-workspace
(+51 files in other folders)
